k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-nodejs
  template:
    metadata:
      labels:
        app: demo-devops-nodejs
    spec:
      containers:
      - name: demo-devops-nodejs
        image: jofiart/demo-devops-nodejs:latest 
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/api/users/"
            port: 8000
            scheme: HTTP
