k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-nodejs-service
spec:
  selector:
    app: demo-devops-nodejs
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
