k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-nodejs-ingress
spec:
  rules:
  - host: app.demo-devopsdevsujofiart.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-devops-nodejs-service
            port:
              number: 80
